--- a/hm5/hm5.tex
+++ b/hm5/hm5.tex
@@ -63,7 +63,7 @@ $$P_{codeerror} =\sum_{j=e+1}^{n} \binom{n}{j}p^j(1-p)^{n-j}$$
 The most significant term in $P_{codeerror}$ is the first one.i.e when $j = e+1$\\\\
 $\implies$\\\\
 $$P_{codeerror} \approx \binom{n}{e+1}p^{e+1}(1-p)^{n-e-1}$$
-For small $p$ and $N<100$ $1-p \approx 1$ \\\\
+For small $p$ and $N<100$\quad $1-p \approx 1$ \\\\
 $\implies$\\
 $$P_{codeerror} \approx \binom{n}{e+1}p^{e+1}$$
 \subsection*{(c) Bit Error Rate}
@@ -101,14 +101,6 @@ $$\implies p^{e+1} = \frac{2x10^{-6}}{\binom{n}{e+1}}$$
 $$ p^{2} = \frac{2x10^{-6}}{\binom{7}{2}}$$
 $$p = \sqrt{\frac{2x10^{-6}}{\binom{7}{2}}}$$
 $$p = 3.08x10^{-4}$$
-
-
-
-
-
-
-
-
 \newpage
 \clearpage
 \section*{Q.2}
