--- a/hm7/hm7.tex
+++ b/hm7/hm7.tex
@@ -54,6 +54,15 @@ Agatha Niwomugizi
 \newpage
 \clearpage
 \setcounter{page}{1}
+\section*{Q.1}
+\newpage
+\clearpage
+\section*{Q.2}
+\newpage
+\clearpage
+\section*{Q.3}
+
+
 
 
 \end{document}
