--- a/hm7/hm7.tex
+++ b/hm7/hm7.tex
@@ -58,11 +58,40 @@ Agatha Niwomugizi
 \newpage
 \clearpage
 \section*{Q.2}
+\subsection*{(b)}
+\begin{figure}[h]
+  \hspace*{-6cm}
+   \includegraphics[scale=0.5]{q2_1}
+   \caption{Kalman filter Internal Temperature}\label{fig:q2_1}
+\end{figure}
+\subsection*{(c)}
+\begin{figure}[h]
+  \hspace*{-6cm}
+   \includegraphics[scale=0.5]{q2_2}
+   \caption{Kalman filter Internal Temperature with control input}\label{fig:q2_2}
+\end{figure}
+
 \newpage
 \clearpage
 \section*{Q.3}
+\subsection*{(a) $\alpha = 0.2$ $\beta = 1$}
+\begin{figure}[h]
+  \hspace*{-6cm}
+   \includegraphics[scale=0.5]{q3_1}
+   \caption{Kalman filter Internal Temperature with control input measurment simulated by MC with $\alpha = 0.2$ $\beta = 1$}\label{fig:q3_1}
+\end{figure}
+\newpage
+\clearpage
 
-
-
+\subsection*{(b) $\alpha = 0.2$ $\beta = 0.2$}
+\begin{figure}[h]
+  \hspace*{-6cm}
+   \includegraphics[scale=0.5]{q3_2}
+   \caption{Kalman filter Internal Temperature with control input measurment simulated by MC with $\alpha = 0.2$ $\beta = 0.2$}\end{figure}
+\newpage
+\begin{appendix}
+\section*{Code Appendix}
+\lstinputlisting[language=Octave]{mcKalman.m} 
+\end{appendix}•
 
 \end{document}
